# tighttp

./: .gitignore  HttpTypes.hs  README.md  Server.hs  checkRequest.hs  get.hs  gets.hs  post.hs  post.html  posts.hs  server.hs  servers.hs  stack.yaml  tighttp.cabal
debug/: get.hs  gets.hs  post.hs  post_no_chunk.hs  posts.hs  server.hs  servers.hs
examples/: get.hs  gets.hs  post.hs  posts.hs  server.hs  server_cookie.hs  serverp.hs  serverps.hs  servers.hs
src/: Client.hs  HttpTypes.hs  Server.hs
src/Network/TigHTTP/: Client.hs  CookieTime.hs  HttpTypes.hs  Papillon.hs  Server.hs  Token.hs  Types.hs
tribial/: readChunked.hs  testGhc.hs  testPapillon.hs
